refactor match csv